--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0px;
     font-family: 'segoe ui';
     height: 100vh;
-    background-image: url("./bg.png");
+    background-image: url("https://img.freepik.com/premium-photo/hands-vinyl-record-players-wooden-background_94064-11176.jpg?w=740");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
